--- a/bank-charts/Chart.yaml
+++ b/bank-charts/Chart.yaml
@@ -14,6 +14,6 @@ dependencies:
   # Subchart for bank DB
   - name: postgresql
     version: "latest"
-    repository: "https://charts.bitnami.com/bitnami"
+    repository: "https://hub.docker.com/r/bitnami/postgresql"
     alias: bank-db
     condition: bank-db.enabled
